--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ rust-files/gestureControl/target/debug/.fingerprint/proc-macro2-f3150d3cd8ce8176
 rust-files/gestureControl/target/debug/.fingerprint/quote-889c8b2376f412bb/dep-lib-quote
 *.timestamp
 /rust-files
+*.docx
+*.txt
